# store_api

./: README.md  pyproject.toml
app/: main.py
app/controllers/: product_controller.py
app/database/: mongo.py
app/schemas/: product_schema.py
app/usecases/: product_usecase.py
tests/: test_product_controller.py  test_product_schema.py  test_product_usecase.py
