[tool.poetry]
name = "store-api"
version = "0.1.0"
description = "API com FastAPI, MongoDB e TDD"
authors = "Ronald Da Silva"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
motor = "^3.4.0"
pydantic = "^2.6.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2.1"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.0"
